syntax = "proto3";

package resources.mailer;

import "resources/timestamp/timestamp.proto";
import "validate/validate.proto";

option go_package = "github.com/fivenet-app/fivenet/gen/go/proto/resources/mailer;mailer";

message Template {
  uint64 id = 1;
  resources.timestamp.Timestamp created_at = 3;
  optional resources.timestamp.Timestamp updated_at = 4;
  optional resources.timestamp.Timestamp deleted_at = 5;
  uint64 email_id = 6;
  // @sanitize: method=StripTags
  string title = 7 [(validate.rules).string = {
    min_len: 3,
    max_len: 255
  }];
  // @sanitize
  string content = 8 [(validate.rules).string = {
    min_len: 3,
    max_len: 10240
  }];
  optional string creator_job = 9 [(validate.rules).string.max_len = 40];
  optional int32 creator_id = 10 [(validate.rules).int32.gt = 0];
}
